--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,6 @@
     "express": "^4.17.1",
     "rlp": "^2.2.4",
     "web3": "^1.2.4"
-  }
+  },
+  "devDependencies": {}
 }
