--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sign-verify-ethereum",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "ethereum-tx-decoder": "^3.0.0",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-tx": "^2.1.2",
     "express": "^4.17.1",
-    "rlp": "^2.2.4",
-    "web3": "^1.2.4"
+    "web3": "^1.2.5-rc.0"
   },
   "devDependencies": {}
 }
