Add connection to the database

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,12 @@
         "semi": [
             "error",
             "never"
+        ],
+        "no-unused-vars": [
+            "error",
+            {
+                "args": "none"
+            }
         ]
     }
 }
