--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-tx": "^2.1.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "node-postgres": "^0.1.2",
     "sodium": "^3.0.2",
     "web3": "^1.2.5-rc.0",
