--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "node-postgres": "^0.1.2",
+    "socket.io": "^2.3.0",
     "sodium": "^3.0.2",
     "web3": "^1.2.5-rc.0",
     "winston": "^3.2.1",
