--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,12 @@
 NODE_ENV=development
 
-APP_PORT=80
-JWT_PR_KEY=
-
 PGUSER=
 PGHOST=
 PGPASSWORD=
 PGDATABASE=
-PGPORT=5432
+PGPORT=
 
-CONTRACT_ADDRESS=
-INFURA_ROPSTEN=
-JWT_EXPIRE_TIME=
-
-DEV_APP_PORT=8080
+DEV_APP_PORT=
 DEV_JWT_PR_KEY=
 
 DEV_PGUSER=
