--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Chatting app based on ethereum micropayments",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon .",
+    "start": "node .",
+    "dev": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint-fix": "eslint --fix ."
